<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/botton"
    android:paddingStart="@dimen/left"
    android:paddingEnd="@dimen/right"
    android:paddingTop="@dimen/top"
    android:orientation="vertical"
    tools:context=".ConfirmarActivity">

    <TextView
        android:id="@+id/tcConfirmarDato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tab"
        android:fontFamily="@font/courgette"
        android:text="@string/tlConfirmar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/botton"
        android:fontFamily="@font/courgette"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/botton">

        <TextView
            android:id="@+id/lbFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/right"
            android:fontFamily="@font/courgette"
            android:text="@string/tlFecha"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/Fecha"
            android:textSize="18sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/botton">

        <TextView
            android:id="@+id/lbTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/right"
            android:fontFamily="@font/courgette"
            android:text="@string/telefono"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:layout_marginRight="@dimen/right"
            android:text="@string/telefono"
            android:textSize="18sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/botton">

        <TextView
            android:id="@+id/lbMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/right"
            android:fontFamily="@font/courgette"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/email"
            android:textSize="18sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/botton">

        <TextView
            android:id="@+id/lbDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/right"
            android:fontFamily="@font/courgette"
            android:text="@string/descripcion"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/descripcion"
            android:textSize="14sp"></TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btVolver"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:onClick="Volver"
        android:text="@string/botonEditar" />

</LinearLayout>